syntax = "proto3";

package quaiprotocol;
option go_package = "github.com/dominant-strategies/go-quai/p2p/pb";

import "common/proto_common.proto";
import "core/types/proto_block.proto";

// GossipSub messages for broadcasting blocks and transactions
message GossipWorkObject { block.ProtoWorkObject work_object = 1; }

message GossipTransaction { block.ProtoTransaction transaction = 1; }

// QuaiRequestMessage is the main 'envelope' for QuaiProtocol request messages
message QuaiRequestMessage {
    uint32 id = 1;
    common.ProtoLocation location = 2;
    oneof data {
        common.ProtoHash hash = 3;
        bytes number = 4;
    }
    oneof request {
        block.ProtoWorkObjectBlockView work_object_block = 5;
        block.ProtoWorkObjectBlocksView work_object_blocks = 6;
        block.ProtoWorkObjectHeaderView work_object_header = 7;
        common.ProtoHash block_hash = 8;
    }
}

// QuaiResponseMessage is the main 'envelope' for QuaiProtocol response messages
message QuaiResponseMessage {
    uint32 id = 1;
    common.ProtoLocation location = 2;
    oneof response {
        block.ProtoWorkObjectHeaderView work_object_header_view = 3;
        block.ProtoWorkObjectBlockView work_object_block_view = 4;
        block.ProtoWorkObjectBlocksView work_object_blocks_view = 5;
        common.ProtoHash block_hash = 6;
    }
}

message QuaiMessage {
    oneof payload {
        QuaiRequestMessage request = 1;
        QuaiResponseMessage response = 2;
    }
}
